--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,8 +3,21 @@
 
     <string name="app_name">便民取款钱包</string>
     <string name="hello_world">Hello world!</string>
-	<string name="username_hint">账号</string>
-	<string name="passwd_hint">密码</string>
-	<string name="button_login">登  陆</string>
+    <string name="username_hint">账号</string>
+    <string name="passwd_hint">密码</string>
+    <string name="button_login">登  陆</string>
+    <string name="title_activity_ocr">OcrActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="imageview_desc">Mask</string>
+    <string name="ocr_result_hint">识别结果</string>
+    <string name="ocr_order_default">第1张</string>
+    <string name="commit">上传</string>
+    <string name="take_photo">拍照</string>
+    <string name="confirm">确认</string>
+    <string name="title_activity_result">ResultActivity</string>
+    <string name="cancel">取消交易</string>
+    <string name="pay">确认交易</string>
+    <string name="ocr_result_default">HC12345678</string>
+    <string name="ocr_number_default">交易金额：1000.00元</string>
 
 </resources>
