--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="username_hint">账号</string>
     <string name="passwd_hint">密码</string>
-    <string name="button_login">登  陆</string>
+    <string name="button_login">登  录</string>
     <string name="title_activity_ocr">OcrActivity</string>
     <string name="action_settings">Settings</string>
     <string name="imageview_desc">Mask</string>
@@ -18,7 +18,7 @@
     <string name="cancel">取消交易</string>
     <string name="pay">确认交易</string>
     <string name="ocr_result_default"></string>
-    <string name="ocr_number_default">交易金额：1000.00元</string>
-    <string name="title_activity_algodebug">AlgodebugActivity</string>
+    <string name="ocr_number_default">交易金额：0.00元</string>
+    <string name="title_activity_algodebug">拍照结果</string>
 
 </resources>
